--- a/lang/pl.json
+++ b/lang/pl.json
@@ -15,7 +15,7 @@
     "All rights reserved.": "Wszelkie prawa zastrzeżone.",
     "Already registered?": "Już zarejestrowany?",
     "Already Reported": "Już zgłoszone",
-    "Archive": "Archiwizuj",
+    "Archive": "Zarchiwizuj",
     "Are you sure you want to delete your account?": "Czy na pewno chcesz usunąć swoje konto?",
     "Assign": "Przydziel",
     "Associate": "Współpracownik",
